src/controller/snapshots/loco_rs__controller__format__tests__builder_cookies_response.snap
---
source: src/controller/format.rs
expression: response.headers()
---
{
    "set-cookie": "foo=bar",
    "set-cookie": "baz=qux",
}
