src/controller/snapshots/loco_rs__controller__format__tests__redirect_response.snap
---
source: src/controller/format.rs
expression: response
---
Response {
    status: 303,
    version: HTTP/1.1,
    headers: {
        "location": "https://loco.rs",
    },
    body: Body(
        UnsyncBoxBody,
    ),
}
