src/controller/snapshots/loco_rs__controller__format__tests__yaml_response_format.snap
---
source: src/controller/format.rs
expression: response
---
Response {
    status: 200,
    version: HTTP/1.1,
    headers: {
        "content-type": "application/yaml",
    },
    body: Body(
        UnsyncBoxBody,
    ),
}
